--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Jiwoo Lee</title>
-        <link href="../css/index.css" rel="stylesheet" type="text/css">
+        <link href="css/index.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
@@ -31,6 +31,6 @@
 
         </div>
 
-        <script src="../js/animation.js"></script>
+        <script src="js/animation.js"></script>
     </body>
 </html>
