--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <div class="button-groups">
                 <button class="button">
-                    <a href="https://drive.google.com/file/d/1DcDc_9mbuJD5hhmtVKV2NFlK3a2p4xBt/view?usp=sharing">Resume</a>
+                    <a href="https://github.com/JiwooL0920/Resume/blob/master/resume-jiwoolee-sep14.pdf">Resume</a>
                 </button>
 
                 <button class="button">
