--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <div class="button-groups">
                 <button class="button">
-                    <a href="https://github.com/JiwooL0920/Resume/blob/master/resume-jiwoolee-sep14.pdf">Resume</a>
+                    <a href="https://drive.google.com/file/d/1HYlDyg_L1oreFo6NPQVnbncsvHeJUzVu/view?usp=sharing">Resume</a>
                 </button>
 
                 <button class="button">
