change link for linkedin

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </button>
 
                 <button class="button">
-                    <a href="https://www.linkedin.com/in/jiwoolee0920/">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/jiwool0920/">LinkedIn</a>
                 </button>
 
             </div>
